# wacc

./: .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: EmbedFile.cmake  PrependPath.cmake  config.h.cmake-in
include/buf/: buf.h
include/file/: file.h
include/process/: process.h  process_options.def
include/str/: str.h  strtox.h
include/sum/: sum.h
include/wacc/: ast.h  codegen.h  mkexe.h  range.h  run.h  scan.h  system.h
include/wacc/ast/: binary_op_kinds.def  expr_kinds.def  expression_types.def  function_types.def  node_kinds.def  stmt_kinds.def  unary_op_kinds.def
include/wacc/system/: errors.def
resources/: grammar.g  grammar.peg
resources/bison/: c.y
resources/flex/: c.l
src/embed/: embed.c
src/file/: file.c
src/process/: process.c
src/str/: str.c  strtox.c
src/wacc/: ast.c  codegen.c  main.c  mkexe.c  run.c  scan.c  system.c
src/wacc_driver/: main.c
tests/: collect.c  main.c  test.c  test.h  test_results.def
tests/cases/stage4/valid/: bitwise_and.c  bitwise_lshift.c  bitwise_or.c  bitwise_rshift.c  bitwise_xor.c  modulo.c
tests/include/wacc/test/: collect.h  impl.h  test.h
